--- a/css.css
+++ b/css.css
@@ -1,6 +1,6 @@
 body {
     margin: 10px;
-    background: url('img/navy.png');
+    background: url('navy.png');
     overflow: hidden;
     height: 96vh;
     /*background-size: cover;
